module-system/sov-modules-macros/tests/rpc/expose_rpc_associated_type_not_static.stderr
error[E0425]: cannot find value `api_state_accessor` in this scope
  --> tests/rpc/expose_rpc_associated_type_not_static.rs:93:26
   |
93 |                     .get(api_state_accessor)
   |                          ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `<T as TestSpec>::Data: std::default::Default` is not satisfied
   --> tests/rpc/expose_rpc_associated_type_not_static.rs:104:8
    |
104 | struct Runtime<S: Spec, T: TestSpec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<S, T>: std::default::Default`
    |
note: required for `Runtime<S, T>` to implement `std::default::Default`
   --> tests/rpc/expose_rpc_associated_type_not_static.rs:102:10
    |
102 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |          ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
    = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
